# cppprocessing

./: .cproject  .gitignore  .project  .travis.yml  03-08-2015_output.h5  04-08-2015 output.h5  CMakeLists.txt  HDF5_loader_TDD.txt  Output_same_as_Hazem's.h5  README.md  gdb.cmd  generic_output.h5  gmon.out  h5tutr_dset.h5  opreport.txt  perf.data  perf.data.old  profile_report.txt  profile_stat_desktop  profile_stat_server  rand_numbers.h5  test.h5  test_param_file.txt  test_param_file.txt~
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/7/29/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
.metadata/.plugins/org.eclipse.search/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
BOOST_test_ADC_decode/: makefile  objects.mk  sources.mk
BOOST_test_ADC_decode/src/: percival_ADC_decode.d  percival_calib_params.d  subdir.mk
BOOST_test_ADC_decode/test/unit_test/: subdir.mk  test_ADC_decode.d  test_HDF5_loader.d  test_main.d
Debug/: .gitignore  cppProcessing2.0  makefile  objects.mk
Debug/src/: subdir.mk
Debug/test/unit_test/: subdir.mk  test_ADC_decode.d
H5_src/: CMakeLists.txt  percival_calib_params.cpp  percival_load_calib_params.cpp
Include/: percival_ADC_decode.h  percival_ADU_to_electron_correction.h  percival_AVX.h  percival_CDS_correction.h  percival_HDF5_loader.h  percival_HDF5_writer.h  percival_avx.h  percival_calib_params.h  percival_data_validity_checks.h  percival_exceptions.h  percival_frame.h  percival_frame_metadata.h  percival_functors.h  percival_global_params.h  percival_load_calib_params.h  percival_processing.h
Profiling/: cppProcessing2.0  makefile  objects.mk  profile_report.txt  run  run~  sources.mk
Profiling/h5cpp_examples/: subdir.mk
Profiling/profile/: main.d  subdir.mk
Profiling/src/: percival_ADC_decode.d  percival_calib_params.d  percival_global_params.d  subdir.mk
Release/: makefile  objects.mk
Release/.metadata/.plugins/org.eclipse.cdt.make.core/: subdir.mk
Release/.metadata/.plugins/org.eclipse.cdt.managedbuilder.core/: subdir.mk
Release/profile/: subdir.mk
Release/src/: percival_ADC_decode.d  subdir.mk
Release/test/unit_test/: subdir.mk
cmake/: FindTBB.cmake
data/: ADC_decode_output  ADC_tr6_W14_14BSI_TChip-40C_bias10f_2014-02-28_14-05_CoarseGainArray.h5  ADC_tr6_W14_14BSI_TChip-40C_bias10f_2014-02-28_14-05_FineGainArray.h5  Gain_lookup_table1.h5  Gain_lookup_table2.h5  Gain_lookup_table3.h5  Gain_lookup_table4.h5  Output.h5  test_HDF5.h5  test_param_file.txt  test_write_to_HDF5.h5  trPTC8a_W14_14TS1BSI_TChip-40_bias10f_2014_02_28_21-32_PTC7row_ADU2e.h5
h5cpp_examples/: Notes.txt  Notes.txt~  ObjFunc.txt  ObjFunc.txt~
oprofile_data/samples/current/{root}/home/pqm78245/percivalProcessing/cppProcessing2.0/Profiling/cppProcessing2.0/{dep}/{kern}/no-vmlinux/: CPU_CLK_UNHALTED.100000.0.all.all.all
oprofile_data/samples/current/{root}/home/pqm78245/percivalProcessing/cppProcessing2.0/Profiling/cppProcessing2.0/{dep}/{root}/lib64/ld-2.12.so/: CPU_CLK_UNHALTED.100000.0.all.all.all
oprofile_data/samples/current/{root}/home/pqm78245/percivalProcessing/cppProcessing2.0/Profiling/cppProcessing2.0/{dep}/{root}/lib64/libc-2.12.so/: CPU_CLK_UNHALTED.100000.0.all.all.all
oprofile_data/samples/previous/{root}/home/pqm78245/percivalProcessing/cppProcessing2.0/Profiling/cppProcessing2.0/{dep}/{kern}/no-vmlinux/: CPU_CLK_UNHALTED.100000.0.all.all.all
parallel_test/: CMakeLists.txt  main.cpp
percival_parallel/: CMakeLists.txt  percival_ADC_decode_pipe.cpp  percival_parallel.h  percival_unit_ADC_calibration_pf.cpp  percival_unit_ADC_decode_p.cpp  percival_unit_gain_multiplication_pf.cpp
profile/: CMakeLists.txt  main.cpp
pyProcessing/: .project  NotAHDF5File.txt  convert_h5ls_output_to_h5_single_int16.py  mytestfile.hdf5  pyProcessing.py  test_HDF5.h5
pyProcessing/data/: ADC_tr6_W14_14BSI_TChip-40C_bias10f_2014-02-28_14-05_CoarseOffsetArray.h5  ADC_tr6_W14_14BSI_TChip-40C_bias10f_2014-02-28_14-05_FineOffsetArray.h5  KnifeQuadBPos1CDSed_0_18.h5  KnifeQuadBPos1_2_21_int16.h5  KnifeQuadBPos1_2_21_int8.h5  KnifeQuadBPos2_2_21_int16.h5
src/: CMakeLists.txt  percival_ADC_decode.cpp  percival_ADU_to_electron_correction.cpp  percival_CDS_correction.cpp  percival_avx.cpp  percival_calib_params.cpp  percival_data_validity_checks.cpp  percival_exceptions.cpp  percival_global_params.cpp  percival_unit_ADC_calibration.cpp  percival_unit_ADC_decode.cpp  percival_unit_gain_multiplication.cpp
test/unit_test/: CMakeLists.txt  test_ADC_decode.cpp  test_ADC_decode_combined_pipeline.cpp  test_ADC_decode_pf.cpp  test_ADU_to_electron_correction.cpp  test_CDS_correction.cpp  test_HDF5_loader.cpp  test_HDF5_writer.cpp  test_main.cpp  test_percival_frame.cpp  test_unit_ADC_calibration.cpp  test_unit_ADC_calibration_pf.cpp  test_unit_ADC_decode.cpp  test_unit_ADC_decode_pf.cpp  test_unit_gain_multiplication.cpp  test_unit_gain_multiplication_pf.cpp
test_data_generation/: cppProcessing2.0  makefile  sources.mk
test_data_generation/profile/: subdir.mk
test_data_generation/src/: subdir.mk
test_data_generation/test/unit_test/: subdir.mk
test_data_generation/tools/: HDF5_test_file_generator.d  subdir.mk
tools/: ADC_decoding_output_generator.py  HDF5_test_file_generator.cpp  README.md  bandwidth.py  calibration_data_generator.py  output_processing.py  profile_processing.py  profile_report.txt
(+7 files in other folders)
